# sz_simple_redoer_rust

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DOCKER_NOTES.md  Dockerfile  NEXT_STEPS.md  README.md  STATUS.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
src/: main.rs
tests/: integration_test.rs
